# tyhylge

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml  linux.yml  windows.yml
app/: CMakeLists.txt  main.c
cmake/: config.cmake.in
lib/: CMakeLists.txt  tyhylge.c
scripts/: make-dependencies.sh
src/: CMakeLists.txt  tyhylge.c  tyhylge.h
